--- a/netvod.css
+++ b/netvod.css
@@ -28,3 +28,100 @@ nav{
 .accueil-action > a{
     size: 32pt;
 }
+
+div {
+    display: flex;
+}
+div a{
+    color: black;
+    text-decoration: none ;
+}
+#champ th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #7b3c3c;
+    color: white;
+    font-size: x-large;
+}
+#champ {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+#champ td, #champ th {
+    border: 1px solid #000000;
+    padding: 8px;
+    background-color: gray;
+}
+#champ tr {
+    font-size: large;
+}
+#champ td:nth-child(even){background-color: #b6b6b6;}
+#champ tr:hover > td {background-color: #7b3c3c}
+
+:root{
+    --hauteur-menu: 60px;
+}
+
+nav {
+    width: 100%;
+    font-size: 18px;
+    position: sticky;
+    top: 0;
+}
+
+nav > ul {
+    display: flex;
+    text-align: center;
+    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.3);
+    height: var(--hauteur-menu);
+}
+
+nav ul {
+    list-style-type: none;
+}
+
+nav > ul > li {
+    background-color: white;
+    position: relative;
+    height: 100%;
+    flex: 1;
+}
+
+nav > ul > li > a {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+li a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu-deroulant > a:after{
+    content: '❯';
+    font-size: 15px;
+    margin-left: 7px;
+    display: inline-block;
+}
+
+.sous-menu {
+    margin-top: var(--hauteur-menu);
+    width: 100%;
+    text-align: left;
+    background-color: white;
+    border-radius: 2px;
+    overflow: hidden;
+    max-height: 0;
+}
+
+.sous-menu > li > a {
+    height: 50px;
+    padding-left: 20px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+}
