--- a/netvod.css
+++ b/netvod.css
@@ -1,5 +1,10 @@
 body {
     padding: 10px;
+    text-align: center;
+}
+
+body a {
+    text-decoration: underline;
 }
 
 nav{
@@ -32,7 +37,8 @@ nav{
 div {
     display: inline-block;
 }
-div a{
+
+#amenu{
     color: black;
     text-decoration: none ;
 }
@@ -87,7 +93,6 @@ div a{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
 
 
 .menu-deroulant > a:after{
