--- a/netvod.css
+++ b/netvod.css
@@ -7,15 +7,8 @@ body a {
     text-decoration: underline;
 }
 
-nav{
-    border-bottom: 1px solid black;
-    margin-bottom: 100px;
-    text-align: left;
-}
+.menu {
 
-#menu{
-    list-style-type: none;
-    padding-left: 0;
 }
 
 .element{
@@ -31,9 +24,7 @@ nav{
     size: 32pt;
 }
 
-div {
-    display: inline-block;
-}
+
 
 #amenu{
     color: black;
