--- a/netvod.css
+++ b/netvod.css
@@ -1,3 +1,5 @@
+
+
 body {
     padding: 10px;
     text-align: center;
@@ -16,9 +18,13 @@ body a {
     padding-left: 0;
 }
 
+#logo {
+    margin-top: -25px;
+}
+
 .element{
     display: inline-block;
-    margin-left: 50px;
+    margin-left: 70px;
 }
 
 .accueil-action > ul{
