--- a/netvod.css
+++ b/netvod.css
@@ -1,35 +1,62 @@
 
 
 body {
-    padding-top: 20px;
+    margin: 0;
     text-align: center;
     background-image: url("./rsrc/background.jpg");
+    background-color: #171717aa;
     color: black;
     font-family: Arial, serif;
 
 }
 
-body a {
-    text-decoration: underline;
+.serie{
+    display: inline-block;
+    width: 300px;
 }
 
-.content{
-    position: absolute;
-    width: 75%;
-    left: 50%;
-    transform: translate(-50%);
-    background-color: darkgray;
-    border-radius: 10px;
-    padding: 20px;
-    margin-top: 5%;
+.content a:visited{
+    color: #d81f26;
 }
+
+.content a{
+    text-decoration: none;
+    color: #d81f26;
+}
+
+.content a:hover{
+    color: #d81f26;
+}
+
+.content a:active{
+    color: #d81f26;
+}
+.content{
+     position: absolute;
+     width: 75%;
+     left: 50%;
+     transform: translate(-50%);
+     background-color: #444444dd;
+     color: #ededed;
+     border-radius: 10px;
+     padding: 20px;
+     margin-top: 5%;
+ }
+
 .menu{
+    display : flex;
+    align-items: center;
     width: 100%;
     height: 75px;
-    background-color: black;
+    background-color: #444444;
     text-align: left;
 }
 
+nav div{
+    display :flex;
+    justify-content: center;
+    align-items: center;
+}
 
 img{
     width: 60%;
@@ -38,16 +65,40 @@ img{
 
 
 .element{
-    display: inline-block;
+    display: list-item;
+    text-align: -webkit-match-parent;
     margin-left: 70px;
+    font-weight: bold;
 }
 
-.accueil-action > ul{
+.navList{
     list-style-type: none;
+    display : flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 72em;
 }
 
 .accueil-action > a{
     size: 32pt;
+    text-decoration: none;
+}
+
+.element a:visited{
+    color: #fbf8f1;
+}
+
+.element a{
+    text-decoration: none;
+    color: #fbf8f1;
+}
+
+.element a:hover{
+    color: #fbf8f1;
+}
+
+.element a:active{
+    color: #fbf8f1;
 }
 
 div {
@@ -58,6 +109,7 @@ div {
     color: black;
     text-decoration: none ;
 }
+
 #champ th {
     padding-top: 12px;
     padding-bottom: 12px;
