--- a/netvod.css
+++ b/netvod.css
@@ -1,13 +1,19 @@
 
+@import "reset.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap');
 
 body {
-    margin: 0;
     text-align: center;
+    font-family: 'Poppins', sans-serif;
     background-image: url("./rsrc/background.jpg");
     background-color: #171717aa;
+    background-size: cover;
+    background-position: top center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    min-height: 10rem;
     color: black;
-    font-family: Arial, serif;
-
+    display: flex;
 }
 
 .serie{
@@ -16,34 +22,211 @@ body {
 }
 
 .content a:visited{
-    color: #d81f26;
+    color: #ffffff;
 }
 
 .content a{
     text-decoration: none;
-    color: #d81f26;
+    color: #ffffff;
 }
 
 .content a:hover{
-    color: #d81f26;
+    color: #ffffff;
 }
 
 .content a:active{
-    color: #d81f26;
+    color: #ffffff;
 }
-.content{
-     position: absolute;
-     width: 75%;
-     left: 50%;
-     transform: translate(-50%);
-     background-color: #444444dd;
-     color: #ededed;
-     border-radius: 10px;
-     padding: 20px;
-     margin-top: 5%;
- }
+.content .title {
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
 
-.menu{
+.content{
+    display: flex;
+    width: 60%;
+    background-color: rgba(106, 106, 106, 0.5);
+    border-radius: 10px;
+    margin: 10rem auto;
+}
+
+.content #welcome {
+    font-size: 3rem;
+    margin: auto;
+    padding: 2rem;
+    color: white;
+}
+
+.content .form-group {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 4rem 4rem 4rem 4rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content .form-item {
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+
+.content .form-item input {
+    width: 100%;
+    padding: 1rem 1rem 1rem calc(1rem * 3.6);
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    background-color: rgba(141, 141, 141, 0.6);
+    text-align: left;
+    color: black;
+    transition: background-color 0.5s;
+}
+
+.content .form-item input:focus {
+    background-color: white;
+}
+
+.content .form-item input:hover {
+    background-color: white;
+}
+
+.content .form-item-other button:hover {
+    background-color: white;
+    padding: 1.2rem;
+}
+
+.content .form-item span {
+    position: absolute;
+    top:0.87rem;
+    left: 1.5rem;
+    cursor: default;
+}
+
+.content .form-item-other {
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.content .form-item-other a {
+    text-decoration: none;
+    color: white;
+}
+
+.content .form-item-other button {
+    margin-top: 20px;
+    background: black;
+    width: 100%;
+    padding: 1rem;
+    color: #8c8c8c;
+    border-radius: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.content .double-form-item {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.content .double-form-sous-item {
+    width: 100%;
+    position: relative;
+}
+
+.content .double-form-sous-item input {
+    width: 98%;
+    padding: 1rem 1rem 1rem calc(1rem * 3.6);
+    border-radius: 50px;
+    border: none;
+    outline: none;
+    background-color: rgba(141, 141, 141, 0.6);
+    text-align: left;
+    color: black;
+    transition: background-color 0.5s;
+}
+
+.content .double-form-item span {
+    position: absolute;
+    top: 0.87rem;
+    left: 1.5rem;
+}
+
+.serieRender {
+    display: inline-block;
+    width: 50%;
+    margin: 10px;
+    border: 1px solid #d81f26;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(65, 65, 65, 0.69);
+    color: #ededed;
+    align-items: center;
+}
+
+.accueil-action-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    color: white;
+}
+
+.accueil-action-title h1 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+
+.accueil-action-item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto auto 10px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.accueil-action > a{
+    size: 32pt;
+    text-decoration: none;
+}
+
+.profile-action-group {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    color: white;
+}
+
+.profile-action-title h1 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+
+.profile-action-item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto auto 10px auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu img {
+    display: block;
+    margin-left: auto;
+    cursor: default;
+}
+
+.menu {
     display : flex;
     align-items: center;
     width: 100%;
@@ -52,23 +235,44 @@ body {
     text-align: left;
 }
 
+.menuPrincipal {
+    display: block;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
 nav div{
     display :flex;
     justify-content: center;
     align-items: center;
 }
 
+
 img{
     width: 60%;
     height: 30%;
 }
 
-
-.element{
+.element {
     display: list-item;
     text-align: -webkit-match-parent;
     margin-left: 70px;
     font-weight: bold;
+}
+
+.element > a {
+    color: #ffffff;
+    text-decoration: none;
+    border-bottom: none;
+    transition: ease-in-out 0.3s ;
+}
+
+.element > a:hover{
+    color: #d81f26;
+    border-bottom: #d81f26 2px solid;
 }
 
 .navList{
@@ -77,28 +281,6 @@ img{
     justify-content: space-evenly;
     align-items: center;
     width: 72em;
-}
-
-.accueil-action > a{
-    size: 32pt;
-    text-decoration: none;
-}
-
-.element a:visited{
-    color: #fbf8f1;
-}
-
-.element a{
-    text-decoration: none;
-    color: #fbf8f1;
-}
-
-.element a:hover{
-    color: #fbf8f1;
-}
-
-.element a:active{
-    color: #fbf8f1;
 }
 
 div {
@@ -133,16 +315,15 @@ div {
     --hauteur-menu: 60px;
 }
 #deroule {
+    margin-top: 20px;
     width: 100%;
     font-size: 18px;
-    position: sticky;
-    top: 0;
-    border-top: 1px solid black;
+    position: relative;
 }
 #deroule > #serie {
     display: flex;
     text-align: center;
-    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.3);
+    box-shadow: 0 1px 2px 1px rgba(0,0,0,0.3);
     height: var(--hauteur-menu);
 }
 #deroule #serie {
@@ -163,23 +344,16 @@ div {
 }
 
 
-.menu-deroulant > a:after{
-    content: '❯';
-    font-size: 15px;
-    margin-left: 7px;
-    display: inline-block;
-}
 .sous-menu {
     margin-top: var(--hauteur-menu);
     width: 100%;
-    margin-left: -40px;
+    padding-left: inherit;
     text-align: left;
     background-color: white;
-    border-radius: 2px;
+    border-radius: 3px;
     overflow: hidden;
     max-height: 0;
 }
-
 .sous-menu > li > a {
     height: 50px;
     padding-left: 20px;
@@ -187,35 +361,32 @@ div {
     align-items: center;
     display: flex;
 }
+
 #deroule > #serie > li:hover > a{
     color: #2169EC;
 }
+.menu-deroulant > a:after{
+    content: '❯';
+    font-size: 15px;
+    margin-left: 7px;
+    display: inline-block;
+    transition: ease 0.8s;
+    transform: rotate(0deg);
+}
 
-@keyframes rotationFleche {
-    0% {
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(90deg);
-    }
-}
 .menu-deroulant:hover > a:after{
-    animation: rotationFleche 0.2s linear forwards;
+    transform: rotate(90deg);
 }
-@keyframes apparitionSousMenu {
-    0% {
-        box-shadow: 0px 3px 3px 1px rgba(0,0,0,0);
-        border-top: 3px solid #2169EC;
-    }
-    30% {
-        box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
-    }
-    100% {
-        max-height: 50em;
-        border-top: 3px solid #2169EC;
-        box-shadow: 0px 3px 3px 1px rgba(0,0,0,0.3);
-    }
+
+.menu-deroulant > .sous-menu {
+    transition: ease-in-out 1s;
+    max-height: 0;
+    box-shadow: 0 3px 3px 1px rgba(0,0,0,0);
+    border-top: none;
 }
+
 .menu-deroulant:hover > .sous-menu {
-    animation: apparitionSousMenu 1s forwards;
+    max-height: 50em;
+    border-top: 3px solid #2169EC;
+    box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.3);
 }
